--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="sehatmaru.memberid">
 
     <application
@@ -8,8 +9,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Splashscreen">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity
+            android:name=".FeedPage"
+            android:label="AWARD"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".WelcomePage"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:label="Welcome Page">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
